# Grume

./: .travis.yml  .travis.yml~  .~lock.credit_origin_license_model.ods#  .~lock.credit_origin_license_sound.ods#  CMakeLists.txt  Frost and flame.cbp  Frost_And_Flame  Frost_And_Flame.cbp  Frost_And_Flame.cfg.old  Frost_And_Flame.depend  Frost_And_Flame.layout  README.md  Readme.md  SDL.txt  ValgrindOut.xml  cachegrind.out.6614  cc47i28k  ccfZ61dm.s  cchfAZFL.lto_wrapper_args  ccnvw2vR  ccwkRzIC.res  changelog.txt  credit_origin_license_model.ods  credit_origin_license_music.ods  credit_origin_license_sound.ods  credit_origin_license_texture.ods  credits.txt  data.fnf  default.cfg  frost_and_flame  frost_and_flame.cfg  frost_and_flame.sh  gamecore.cpp  gamecore.hpp  gmf_export.xml  out.txt  readme.md
.objs/source/: icon.res
3D_model_development/buildings/: dakhma.blend
3D_model_development/textures/: readme.txt
3D_model_development/walls/: wall_001.blend
data/: config.txt  config.txt.old  config_fs.txt  database.txt  game_001.txt  model_credit_origin_license.ods  music_credit_origin_license.ods  sound_credit_origin_license.ods
data/biome/: all_map_list.txt  all_music_set.txt  all_npc_set.txt  all_object_set.txt  all_sound_set.txt  cave_001_biome.txt  cave_001_wall_set.txt  cave_002_biome.txt  cave_002_wall_set.txt  cave_1_biome.txt  cave_2_biome.txt  cave_3_biome.txt  cave_4_biome.txt  cemetery_1_biome.txt  crypt_1_biome.txt  dungeon_001_biome.txt  dungeon_001_wall_set.txt  dungeon_002_biome.txt  dungeon_002_wall_set.txt  dungeon_003_biome.txt  dungeon_003_wall_set.txt  dungeon_003g_biome.txt  dungeon_003g_wall_set.txt  dungeon_004_biome.txt  dungeon_004_wall_set.txt  (+13 more)
maps/: level_0.xml  map.xml  map_reference.xml
save/: Folder for save games.txt  save_000.txt  save_001  save_001.txt  save_002.txt
shaders/: basicshader.frag  basicshader.vert  textureshading.frag  textureshading.vert
source/: UI.cpp  UI.hpp  animation_engine.cpp  animation_engine.hpp  audio_engine.cpp  audio_engine.hpp  audio_engine_buffers.cpp  audio_engine_buffers.hpp  audio_engine_debug.cpp  audio_engine_debug.hpp  audio_engine_ogg.cpp  audio_engine_ogg.hpp  audio_engine_sources.cpp  audio_engine_sources.hpp  audio_engine_types.hpp  audio_engine_wav.cpp  audio_engine_wav.hpp  balls.cpp  balls.hpp  character.cpp  command_line_parser.cpp  command_line_parser.hpp  debug_defines.hpp  debug_log.cpp  debug_log.hpp  defines.hpp  entity.hpp  entity_component_animation.hpp  entity_component_audio.hpp  entity_component_event.hpp  entity_component_graphics.hpp  entity_component_model.hpp  entity_component_physics.hpp  entity_manager.cpp  entity_manager.hpp  entity_manager_audio.cpp  entity_manager_audio.hpp  entity_manager_graphics.cpp  entity_manager_graphics.hpp  entity_manager_loader.cpp  (+114 more)
src/: UI.cpp  UI.hpp  character.cpp  character.hpp  equipment.cpp  equipment.hpp  game.cpp  game.hpp  gamecore.cpp  gamecore.h  gamecore.hpp  icon.rc  inventory.cpp  inventory.hpp  items.cpp  items.hpp  language.cpp  language.hpp  load_resources.cpp  load_resources.hpp  loader_obj.cpp  loader_obj.hpp  main.cpp  main.hpp  map.cpp  map.h  map.hpp  map_3D.cpp  map_3D.hpp  menu_system.cpp  menu_system.hpp  misc.cpp  misc.hpp  npcvendor.cpp  npcvendor.hpp  player.cpp  player.hpp  quest_log.cpp  quest_log.hpp  save_data.cpp  (+5 more)
(+3717 files in other folders)
